<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.eufy.exifcopy.MainFragment">

    <Button
        android:id="@+id/select_target_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_target"
        app:layout_constraintTop_toBottomOf="@+id/target_uri_text"
        app:layout_constraintBottom_toTopOf="@+id/source_uri_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/select_source_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_source"
        app:layout_constraintTop_toBottomOf="@+id/source_uri_text"
        app:layout_constraintBottom_toTopOf="@+id/exclude_orientation_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/execute"
        app:layout_constraintTop_toBottomOf="@+id/exclude_orientation_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/target_uri_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_uri_default"
        app:layout_constraintBottom_toTopOf="@+id/select_target_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/source_uri_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_uri_default"
        app:layout_constraintTop_toBottomOf="@+id/select_target_button"
        app:layout_constraintBottom_toTopOf="@+id/select_source_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/exclude_orientation_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/exclude_orientation_msg"
        app:layout_constraintBottom_toTopOf="@+id/execute_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_source_button" />
</androidx.constraintlayout.widget.ConstraintLayout>